package com.hotel.model.enums;

public enum LoyaltyTransactionType {
    EARN,
    REDEEM,
    ADJUST
}
