package com.hotel.model.enums;

public enum PaymentMethod {
    CASH,
    CARD,
    LOYALTY
}
