package com.hotel.model.enums;

public enum RoomType {
    SINGLE,
    DOUBLE,
    DELUXE,
    PENTHOUSE
}
